# hotel-management

./: README.md  pyproject.toml
hotel_management/: hooks.py  modules.txt
hotel_management/hotel_management/doctype/category/: category.js  category.json  category.py  test_category.py
hotel_management/hotel_management/doctype/category_table/: category_table.json  category_table.py
hotel_management/hotel_management/doctype/hotel_order/: api.py  hotel_order.js  hotel_order.json  hotel_order.py  test_hotel_order.py
hotel_management/hotel_management/doctype/hotel_order_item/: hotel_order_item.json  hotel_order_item.py
hotel_management/hotel_management/doctype/menu/: menu.js  menu.json  menu.py  test_menu.py
hotel_management/hotel_management/doctype/menu_type/: menu_type.js  menu_type.json  menu_type.py  test_menu_type.py
hotel_management/hotel_management/doctype/single_order/: single_order.js  single_order.json  single_order.py  single_order_list.js  test_single_order.py
hotel_management/hotel_management/doctype/table_number/: table_number.js  table_number.json  table_number.py  test_table_number.py
hotel_management/hotel_management/doctype/waiter/: test_waiter.py  waiter.js  waiter.json  waiter.py
hotel_management/hotel_management/hotel_management_dashboard/hotel_management/: hotel_management.json
hotel_management/hotel_management/report/addis_amba_hotel/: addis_amba_hotel.js  addis_amba_hotel.json  addis_amba_hotel.py
hotel_management/hotel_management/report/addis_amba_stock/: addis_amba_stock.js  (+2 more)
hotel_management/room_management/doctype/: util.py
(+45 files in other folders)
